--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <img src="myimg.jpg" alt="">
+    <img src="myimg.JPG" alt="">
     <h3>YASH PATIL</h3>
     <p>Front end Developer</p>
 
